--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Score Keeper</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+  <meta charset=" UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Score Keeper</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
 </head>
 
 <body>
   <section class="section">
     <div class="container mt-6">
       <div class="columns">
-        <div class="column  is-half is-offset-one-quarter">
-          <div class="card">
+        <div class="column is-half is-offset-one-quarter ">
+          <div class="card has-background-black-ter">
             <div class="card-image">
               <figure class="image is-2by1">
                 <img style="object-fit: cover; object-position: bottom;"
@@ -23,15 +23,15 @@
               </figure>
             </div>
             <header class="card-header">
-              <p class="ml-5 mt-5 title">Ping Pong Score Keeper</p>
+              <p class="ml-5 mt-5 mb-5 title">Ping Pong Score Keeper</p>
             </header>
             <div class="card-content">
               <div class="content">
                 <h1 class="title is-1 mb-1"><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
                 <p class="subtitle">Use the buttons below to keep score</p>
                 <label for="playTo" class=" label is-large is-inline">Playing to </label>
-                <div class="select is-rounded">
-                  <select name="" id="playTo">
+                <div class="select is-rounded ">
+                  <select name="playTo" id="playTo" class="has-background-black-ter">
                     <option value="3">3</option>
                     <option value="5">5</option>
                     <option value="7">7</option>
